--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
+<h1>curriculum vitae for mogoto paseka</h1>
 <p>I'm hosted with GitHub Pages.</p>
+<h2>details</h2>
 </body>
 </html>
