--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html>
 <body>
 <h1>curriculum vitae for mogoto paseka</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>As an aspiring web developer currently part of Umuzi .
+    l have an interets in Entrepreneurship  and development .
+    My strengths lie in my never-give-up spirit and being patient.</p>
 <h2>details</h2>
 </body>
 </html>
