--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html>
+    <head><title>curriculum vitae for mogoto paseka</title>
+    <meta charset="uft-8"></meta>
+    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" /></head>
+
 <body>
-<h1>curriculum vitae for mogoto paseka</h1>
+   <div><main><h1>CV FOR MOGOTO PASEKA</h1>
+
 <p>As an aspiring web developer currently part of Umuzi .
     l have an interets in Entrepreneurship  and development .
     My strengths lie in my never-give-up spirit and being patient.</p>
-<h2>details</h2>
+<section><h2>details</h2></section></main></div> 
 </body>
 </html>
