--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <p></p>
     </section>
     <section id="about" class="portfolio-section">
-        <h2>..</h2>
+        <h2>aspiring web developer who believes in dedication and perseverance with a passion for Entrepreneurship and development</h2>
         <p></p>
     </section>
     <section id="skills" class="portfolio-section">
