--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         <p></p>
     </section>
     <section id="skills" class="portfolio-section">
-        <h2>Skills</h2>
-        <p>-github</p>
-        <p>-basic javascript</p>
-        <p>-basic css</p>
-        <p>-basic html</p>
+        
+        <img src="images/download (1).png" alt="jasmine" />
+        <img src="images/download (2).png" alt="csss,html" />
+        <img src="images/download.png" alt="Dinosaur" />
+        
     </section>
     <section id="links" class="portfolio-section">
 
