--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         
     </section>
     <section id="links" class="portfolio-section">
-        <h1><a href ="\paseka editedc v (6).docx.pdf" target="_blank" download>resume </a></h1>
+        <h1><a href ="edited.pdf" target="_blank" download>resume </a></h1>
 
         <h1> <a href="https://github.com/Paseka100">projects</a></h1>
 
