--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <section id="home" class="portfolio-section">
        
   <header><h1>HOME</h1></header>
+  <div class="img">><img src="images/Photo from paseka.jpg"></div>
   <p>hi,my name is mogoto paseka</p>
     </section>
     <section id="about" class="portfolio-section">
