--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <section id="home" class="portfolio-section">
        
   <header><h1>HOME</h1></header>
-  <div class="img">><img src="images/Photo from paseka.jpg"></div>
-  <p>hi,my name is mogoto paseka</p>
+  <div class="img">
+  <p>hi there,<br>my name is mogoto paseka,i am an aspiring web developer</p></div>
     </section>
     <section id="about" class="portfolio-section">
         <header><h1>ABOUT</h1></header>
