--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
     <section id="skills" class="portfolio-section">
         <header> <h1>SKILLS</h1></header> 
         <img src="images/download (1).png" alt="jasmine">
-        <img src="images/download (2).png" alt="csss,html">
+        <img src="images/download (2).png" alt="css,html">
         <img src="images/download.png" alt="github">
     </section>
     <section id="links" class="portfolio-section">
         <header> <h1>LINKS</h1></header> 
         <h1><a href ="edited.pdf" target="_blank" download>resume </a></h1>
 
-        <h1> <a href="https://github.com/Paseka100">projects</a></h1>
+        <h1> <a href="https://github.com/Paseka100">github profile</a></h1>
 
         <p></p>
         
