--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
        <header> <h1> GET IN TOUCH</h1></header> 
             
         <a href="mailto:Pasekamogot@gmail.com"><img src="images/download.jpeg" alt="jasmine"/></a>
-        <a href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"><img src="images/download (3).png" alt="jasmine"/></a>
+        <a href="https://www.linkedin.com/in/paseka-shiba-mogoto-40485027a/"><img src="images/download (3).png" alt="jasmine"/></a>
     </section>
     <script>
 document.getElementById('menu-toggle').addEventListener('click',function(){
