--- a/index.html
+++ b/index.html
@@ -28,19 +28,25 @@
 		</section>
 		<section id="skills" class="portfolio-section">
 			<header><h1>SKILLS</h1></header>
-			<img src="images/download (1).png" alt="jasmine">
-		
-			<img src="images/download.png" alt="github">
+			
+<ul class="order-list">
+	<li>html,css,javascript</li>
+	<li>github</li>
+	<li>docker&postgresql</li>
+	<li>code reviews</li>
+	
+  </ul>
 		</section>
 		<section id="links" class="portfolio-section">
 			<header><h1>LINKS</h1></header>
+			
 			<h1><a href="paseka editedc v (6).docx.pdf" target="_blank" download>resume</a></h1>
 			<h1><a href="https://github.com/Paseka100" target="_blank">github profile</a></h1>
 		</section>
 		<section id="contact" class="portfolio-section">
 			<header><h1>GET IN TOUCH</h1></header>
 			<a href="mailto:Pasekamogot@gmail.com" target="_blank"><img src="images/download.jpeg" alt="jasmine"/></a>
-			<a href="https://www.linkedin.com/in/paseka-shiba-mogoto-40485027a/" target="_blank"><img src="images/download (3).png" alt="jasmine"/></a>
+			<a href="https://www.linkedin.com/in/paseka-shiba-mogoto-40485027a/" target="_blank"><img src="images/images.png" alt="jasmine"/></a>
 		</section>
 	</div>
 </body>
