--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
 		<section id="links" class="portfolio-section">
 			<header><h1>LINKS</h1></header>
 			
-			<h1><a href="paseka editedc v (6).docx.pdf" target="_blank" download>resume</a></h1>
+			<h1><a href="pasekaeditedcv(6).docx.pdf" target="_blank" download>resume</a></h1>
 			<h1><a href="https://github.com/Paseka100" target="_blank">github profile</a></h1>
 		</section>
 		<section id="contact" class="portfolio-section">
 			<header><h1>GET IN TOUCH</h1></header>
-			<a href="mailto:Pasekamogot@gmail.com" target="_blank"><img src="images/download.jpeg" alt="jasmine"/></a>
-			<a href="https://www.linkedin.com/in/paseka-shiba-mogoto-40485027a/" target="_blank"><img src="images/images.png" alt="jasmine"/></a>
+			<a href="mailto:Pasekamogot@gmail.com" target="_blank"><img src="images/download.jpeg" alt="jasmine"></a>
+			<a href="https://www.linkedin.com/in/paseka-shiba-mogoto-40485027a/" target="_blank"><img src="images/images.png" alt="jasmine"></a>
 		</section>
 	</div>
 </body>
