--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 		</section>
 		<section id="education" class="portfolio-section">
 			<header><h1>EDUCATION</h1></header>
-			<p>UNDER CONSTRUCTION WILL BE BACK SOON</p>
+			<ul class="order-list">
+				<li>National senior certificate</li>
+				
+				
+			  </ul>
 		</section>
 		<section id="skills" class="portfolio-section">
 			<header><h1>SKILLS</h1></header>
