--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 	<div class="portfolio-sections">
 		<section id="home" class="portfolio-section">
 			<header><h1>HOME</h1></header>
-		
 				<p>hi there,my name is mogoto paseka,i am an aspiring web developer</p>
 		
 		</section>
@@ -51,6 +50,10 @@
 			<header><h1>GET IN TOUCH</h1></header>
 			<a href="mailto:Pasekamogot@gmail.com" target="_blank"><img src="images/download.jpeg" alt="jasmine"></a>
 			<a href="https://www.linkedin.com/in/paseka-shiba-mogoto-40485027a/" target="_blank"><img src="images/images.png" alt="jasmine"></a>
+		</section>
+		<section id="portfolio sections" class="portfolio-section">
+			<header><h1>PORTFOLIO</h1></header>
+			<p>currently unavaliable will be back soon</p>
 		</section>
 	</div>
 </body>
