--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 	</style>
 </head>
 <body>
-	<header></header>
+	<header><nav>
+		<ul>
+		  <li><a href="#home">HOME</a></li>
+		  <li><a href="#about">ABOUT</a></li>
+		  <li><a href="#contact">CONTACT</a></li>
+		  <li><a href="#skills">SKILLS</a></li>
+		
+		
+		</ul>
+	  </nav></header>
 	<div class="portfolio-sections">
 		<section id="home" class="portfolio-section">
 			<header><h1>HOME</h1></header>
@@ -57,4 +66,5 @@
 		</section>
 	</div>
 </body>
+
 </html>
