--- a/index.html
+++ b/index.html
@@ -10,24 +10,28 @@
 	</style>
 </head>
 <body>
-	<header><nav>
-		<ul>
-		  <li><a href="#home">HOME</a></li>
-		  <li><a href="#about">ABOUT</a></li>
-		  <li><a href="#contact">CONTACT</a></li>
-		  <li><a href="#skills">SKILLS</a></li>
+	
+	<nav id="desktop-nav">
 		
-		
-		</ul>
-	  </nav></header>
+		<div>
+		  <ul class="nav-links">
+			<li><a href="#about">About</a></li>
+			<li><a href="#experience">Experience</a></li>
+			<li><a href="#projects">Projects</a></li>
+			<li><a href="#contact">Contact</a></li>
+		  </ul>
+		</div>
+	  </nav>
+	
 	<div class="portfolio-sections">
 		<section id="home" class="portfolio-section">
-			<header><h1>HOME</h1></header>
-				<p>hi there,my name is mogoto paseka,i am an aspiring web developer</p>
+	
+			
 		
 		</section>
+	
 		<section id="about" class="portfolio-section">
-			<header><h1>ABOUT</h1></header>
+			<h1 class="title">About</h1>
 			<p>aspiring web developer who believes in dedication and perseverance</p>
 		</section>
 		<section id="education" class="portfolio-section">
@@ -56,7 +60,8 @@
 			<h1><a href="https://github.com/Paseka100" target="_blank">github profile</a></h1>
 		</section>
 		<section id="contact" class="portfolio-section">
-			<header><h1>GET IN TOUCH</h1></header>
+		
+			<h1 class="title">GET IN TOUCH</h1>
 			<a href="mailto:Pasekamogot@gmail.com" target="_blank"><img src="images/download.jpeg" alt="jasmine"></a>
 			<a href="https://www.linkedin.com/in/paseka-shiba-mogoto-40485027a/" target="_blank"><img src="images/images.png" alt="jasmine"></a>
 		</section>
@@ -64,6 +69,7 @@
 			<header><h1>PORTFOLIO</h1></header>
 			<p>currently unavaliable will be back soon</p>
 		</section>
+		
 	</div>
 </body>
 
