--- a/index.html
+++ b/index.html
@@ -36,41 +36,44 @@
 				</div>
 		
 		</section>
-	
-
-
-
-
 		
-		<section id="education" class="portfolio-section">
-			<header><h1>EDUCATION</h1></header>
-		
-		</section>
+
 		<section id="contact" class="portfolio-section">
-			<p class="section__text__p1">Get in Touch</p>
-		
-		
+			<div class="image-container">
+				<a href="https://www.linkedin.com/in/paseka-shiba-mogoto-40485027a/" target="_blank">
+					<img src="https://img.icons8.com/fluent/96/000000/linkedin.png" alt="LinkedIn Icon">
+				</a>
+			</div>
+			<div class="image-container">
+				<a href="mailto:Pasekamogot@gmail.com" target="_blank">
+					<img src="https://img.icons8.com/color/96/000000/gmail.png" alt="Gmail Icon">
+				</a>
+			</div>
+			<div class="image-container">
+				<a href="https://github.com/Paseka100" target="_blank">
+					<img src="https://img.icons8.com/fluent/96/000000/github.png" alt="GitHub Icon">
+				</a>
+			</div>
+			
 		</section>
+		
+		
 		<section id="about" class="portfolio-section">
 			<header><h1>about</h1></header>
 			
-
 		</section>
-	</section>
-	<section id="skills" class="portfolio-section">
+		<section id="skills" class="portfolio-section">
 	
-		<div id="skills_list">
-			<ul><li>html,css,javascript</li>
-				<li>docker</li>
-				<li>postgresssql</li>
-				<li>git</li>
-				<li>jasmine</li>
-
-			</ul>
-		</div>
-		
-
-	</section>
+			<div id="skills_list">
+				<ul>
+					<li>html,css,javascript</li>
+					<li>docker</li>
+					<li>postgresssql</li>
+					<li>git</li>
+					<li>jasmine</li>
+				</ul>
+			</div>
+		</section>
 	
 	
 		
