--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 		
 
 		<section id="contact" class="portfolio-section">
+			
 			<div class="image-container">
 				<a href="https://www.linkedin.com/in/paseka-shiba-mogoto-40485027a/" target="_blank">
 					<img src="https://img.icons8.com/fluent/96/000000/linkedin.png" alt="LinkedIn Icon">
@@ -59,8 +60,17 @@
 		
 		
 		<section id="about" class="portfolio-section">
-			<header><h1>about</h1></header>
+		<h1>about</h1>
+			<p class="about_p">I am driven by hard work, persistence, and grit as I carve my path in web development and entrepreneurship.<br> My aim is to become a skilled web developer and build successful ventures.<br> Every day brings opportunities for growth and innovation, and I tackle each challenge with determination and a hunger for success.<br>
+				I believe that dedication and perseverance are crucial for unlocking limitless potential. My journey is marked by a relentless pursuit of excellence and a passion for creating impactful solutions that redefine the digital experience.<br>
+				
+				
+			<div class="about-container">
+				<a href="https://www.linkedin.com/in/paseka-shiba-mogoto-40485027a/" target="_blank">
+					<p1>download my cv here</p1>
+				</a>
 			
+		
 		</section>
 		<section id="skills" class="portfolio-section">
 	
