--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
 				
 			<div class="about-container">
 				<a href="https://www.linkedin.com/in/paseka-shiba-mogoto-40485027a/" target="_blank">
-					<p1>download my cv here</p1>
+					download my cv here
 				</a>
-			
+			</div>
 		
 		</section>
 		<section id="skills" class="portfolio-section">
