--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		
 
 		<section id="contact" class="portfolio-section">
-			
+		<div></div>
 			<div class="image-container">
 				<a href="https://www.linkedin.com/in/paseka-shiba-mogoto-40485027a/" target="_blank">
 					<img src="https://img.icons8.com/fluent/96/000000/linkedin.png" alt="LinkedIn Icon">
