--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 				</div>
 			</section>
 		<section id="contact" class="portfolio-section">
-		
+		<h1>get<br> in<br> touch </h1>
+
 			<div class="image-container">
 				<a href="https://www.linkedin.com/in/paseka-shiba-mogoto-40485027a/" target="_blank">
 					<img src="https://img.icons8.com/fluent/96/000000/linkedin.png" alt="LinkedIn Icon">
