--- a/index.html
+++ b/index.html
@@ -38,13 +38,12 @@
 			<h1>about</h1>
 				<p class="about_p">I am driven by hard work, persistence, and grit as I carve my path in web development and entrepreneurship.<br> My aim is to become a skilled web developer and build successful ventures.<br> Every day brings opportunities for growth and innovation, and I tackle each challenge with determination and a hunger for success.<br>
 					I believe that dedication and perseverance are crucial for unlocking limitless potential. My journey is marked by a relentless pursuit of excellence and a passion for creating impactful solutions that redefine the digital experience.<br>
+					<div class="about-container">
+						<a href="pasekaeditedcv(6).docx.pdf" download="pasekaeditedcv(6).docx.pdf" target="_blank">
+							Download my CV here
+						</a>
+					</div>
 					
-					
-				<div class="about-container">
-					<a href="https://www.linkedin.com/in/paseka-shiba-mogoto-40485027a/" target="_blank">
-						download my cv here
-					</a>
-				</div>
 			
 			</section>
 			<section id="skills" class="portfolio-section">
