--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<section id="home" class="portfolio-section">
 	
 			<div class="section__text">
-		
+		<h1 class="tt">home</h1>
 				<p class="section__text__p1">Hi there my name is,</p>
 				<h1 class="title">paseka mogoto</h1>
 			   <p class="section__text__p1">i am an aspiring web developer</p>
@@ -35,7 +35,8 @@
 		
 		</section>
 		<section id="about" class="portfolio-section">
-			<h1>about</h1>
+			<h1 class="tt">about</h1>
+			
 				<p class="about_p">I am driven by hard work, persistence, and grit as I carve my path in web development and entrepreneurship.<br> My aim is to become a skilled web developer and build successful ventures.<br> Every day brings opportunities for growth and innovation, and I tackle each challenge with determination and a hunger for success.<br>
 					I believe that dedication and perseverance are crucial for unlocking limitless potential. My journey is marked by a relentless pursuit of excellence and a passion for creating impactful solutions that redefine the digital experience.<br>
 					<div class="about-container">
@@ -47,7 +48,7 @@
 			
 			</section>
 			<section id="skills" class="portfolio-section">
-	<h1 class="heading">skills</h1>
+	
 				<div id="skills_list">
 					<ul>
 						<li>html,css,javascript</li>
@@ -60,7 +61,7 @@
 				</div>
 			</section>
 		<section id="contact" class="portfolio-section">
-		<h1>get<br> in<br> touch </h1>
+		
 
 			<div class="image-container">
 				<a href="https://www.linkedin.com/in/paseka-shiba-mogoto-40485027a/" target="_blank">
