--- a/index.html
+++ b/index.html
@@ -48,16 +48,18 @@
 			
 			</section>
 			<section id="skills" class="portfolio-section">
-	
-				<div id="skills_list">
-					<ul>
-						<li>html,css,javascript</li>
-						<li>docker</li>
-						<li>postgresssql</li>
-						<li>git</li>
-						<li>jasmine</li>
-						
-					</ul>
+				
+				<div class="about-containers">
+					<p>postgresql</p>
+				</div
+				><div class="about-containers">
+					<p>docker</p>
+				</div><h1 class="tt">skills</h1>
+			
+				<div class="about-containers">
+					<p>jasmine</p>
+				</div><div class="about-containers">
+				<p>javascript</p>
 				</div>
 			</section>
 		<section id="contact" class="portfolio-section">
