--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
 				</div>
 			</section>
 		<section id="contact" class="portfolio-section">
-		
+			<h4 class="tt">get <br>in<br>touch</h4>
+
 
 			<div class="image-container">
 				<a href="https://www.linkedin.com/in/paseka-shiba-mogoto-40485027a/" target="_blank">
