--- a/index.html
+++ b/index.html
@@ -10,7 +10,16 @@
 	</style>
 </head>
 <body>
-	
+	<button id="mobile-menu-toggle">&#9776; Menu</button>
+    
+    <nav id="mobile-nav">
+        <ul class="nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 	<nav id="desktop-nav">
 		
 		<div>
@@ -101,7 +110,29 @@
 		</section>
 		
 		
+		<script>
+			document.addEventListener("DOMContentLoaded", function() {
+				var mobileMenuToggle = document.getElementById('mobile-menu-toggle');
+				var mobileNav = document.getElementById('mobile-nav');
+				var mobileNavLinks = mobileNav.querySelectorAll('.nav-links a');
 		
+				// Toggle mobile menu visibility
+				mobileMenuToggle.addEventListener('click', function() {
+					if (mobileNav.style.display === 'block') {
+						mobileNav.style.display = 'none';
+					} else {
+						mobileNav.style.display = 'block';
+					}
+				});
+		
+				// Close mobile menu when a link is clicked
+				mobileNavLinks.forEach(function(link) {
+					link.addEventListener('click', function() {
+						mobileNav.style.display = 'none';
+					});
+				});
+			});
+		</script>
 		
 	
 	
