--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<div class="section__text">
 		<h1 class="tt">home</h1>
 				<p class="section__text__p1">Hi there my name is,</p>
-				<h1 class="title">paseka mogoto</h1>
+				<h1 class="title">Paseka Mogoto</h1>
 			   <p class="section__text__p1">i am an aspiring web developer</p>
 			  
 			</div>
