--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 		<section id="home" class="portfolio-section">
 	
 			<div class="section__text">
-		<h1 class="tt">home</h1>
+		
 				<p class="section__text__p1">Hi there my name is,</p>
 				<h1 class="title">Paseka Mogoto</h1>
-			   <p class="section__text__p1">i am an aspiring web developer</p>
+			   <p class="section__text__p1">I am an aspiring web developer</p>
 			  
 			</div>
 			<div class="image-container">
