--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<button id="mobile-menu-toggle">&#9776; Menu</button>
     
     <nav id="mobile-nav">
-        <ul class="nav-links">
+        <ul class="nav-linkss">
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
@@ -114,7 +114,7 @@
 			document.addEventListener("DOMContentLoaded", function() {
 				var mobileMenuToggle = document.getElementById('mobile-menu-toggle');
 				var mobileNav = document.getElementById('mobile-nav');
-				var mobileNavLinks = mobileNav.querySelectorAll('.nav-links a');
+				var mobileNavLinks = mobileNav.querySelectorAll('.nav-linkss a');
 		
 				// Toggle mobile menu visibility
 				mobileMenuToggle.addEventListener('click', function() {
@@ -132,6 +132,9 @@
 					});
 				});
 			});
+
+
+			
 		</script>
 		
 	
