--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			   <p class="section__text__p2">I am an aspiring web developer</p>
 			  
 			</div>
-			<div class="image-container">
+			<div class="image-containers">
 			
 					<img src="images/Photofrompaseka.jpg" alt="GitHub Icon">
 				
