--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<section id="about" class="portfolio-section">
 			<h1 class="tt">about</h1>
 			
-				<p class="about_p">I am driven by hard work, persistence, and grit as I carve my path in web development and entrepreneurship.<br> My aim is to become a skilled web developer and build successful ventures.<br> Every day brings opportunities for growth and innovation, and I tackle each challenge with determination and a hunger for success.<br>
+				<p class="about_pp">I am driven by hard work, persistence, and grit as I carve my path in web development and entrepreneurship.<br> My aim is to become a skilled web developer and build successful ventures.<br> Every day brings opportunities for growth and innovation, and I tackle each challenge with determination and a hunger for success.<br>
 					I believe that dedication and perseverance are crucial for unlocking limitless potential. My journey is marked by a relentless pursuit of excellence and a passion for creating impactful solutions that redefine the digital experience.<br>
 					<div class="about-container">
 						<a  class="white" href="https://docs.google.com/document/d/1qStiWTvOHIRvvn-85rVg1HVCPC4YSmsF/edit?usp=drive_link&ouid=116362636974327554520&rtpof=true&sd=true" target="_blank">
